[package]
name = "repli"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.88"
chrono = "0.4.38"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
mime_guess = "2.0.5"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
